# libsfosdevenc

./: .gitignore  CMakeLists.txt  README.md  devices.ini-base
rpm/: libsfosdevenc.spec
src/: constants.h  device.cpp  device.h  device_keyslots.cpp  devicelist.cpp  devicelist.h  password.cpp  password.h  passwordhwcrypt.cpp  passwordhwcrypt.h  passwordmaker.cpp  passwordmaker.h  passwordplain.cpp  passwordplain.h
src/test/: test.cpp
test/: test.cpp
